--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Homepage</title>
 </head>
 <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
