--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />        
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="header__background">
+        </div>
+        <div class="header__img-container">
+            <img src="./img/pasan2-360w.jpg" alt="" class="header__profile-pic">
+            <div class="header__name">PA-San</div>
+        </div>
+        <div class="header__about-me-box">
+            <div class="header__about-me-title title">
+                About me
+            </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut corrupti doloremque exercitationem esse fugit quae accusamus facere quidem ex deserunt in maxime magni enim sit aperiam, corporis rem similique.
+            <div class="header__link-buttons">
+                <i class="devicon-github-original"></i>  
+                <i class="devicon-linkedin-plain"></i>     
+                <i class="devicon-twitter-original"></i>           
+            </div>                  
+        </div>
+    </header>
+
+    <main>
+    </main>
+
     <footer></footer>
     
 </body>
