--- a/index.html
+++ b/index.html
@@ -34,6 +34,89 @@
     </header>
 
     <main>
+        <div class="main__title title">
+            My work
+        </div>
+        <div class="main__card-container">
+            <div class="main__card">
+                <img src="./img/project1.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+            <div class="main__card">
+                <img src="./img/project2.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+            <div class="main__card">
+                <img src="./img/project3.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+            <div class="main__card">
+                <img src="./img/project4.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+            <div class="main__card">
+                <img src="./img/project5.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+            <div class="main__card">
+                <img src="./img/project6.jpg" alt="" srcset="">
+                <div class="card__header">
+                    <div class="main__card-title title">Project name</div>
+                    <div class="main__card-links">
+                        <i class="devicon-github-original"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                            <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
+            </div>
+        </div>
     </main>
 
     <footer></footer>
