feat: add footer section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,31 @@
         </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="footer_title title">Contact me</div>
+        <div class="footer_contact-intro">
+            Please get in touch if you think our work could be mutually beneficial!
+        </div>
+        <div class="footer_address">
+            <div class="footer_address-line">
+                123 Starry
+            </div> 
+            <div class="footer_address-line">
+                Place, Japan
+            </div> 
+        </div>
+        </div>
+        <div class="footer_phone">555-555</div>
+        <div class="footer_email">pasan@starry.com</div>
+        <div class="footer_link-buttons">
+            <div class="header__link-buttons">
+                <i class="devicon-github-original"></i>  
+                <i class="devicon-linkedin-plain"></i>     
+                <i class="devicon-twitter-original"></i>           
+            </div>  
+        </div>
+        <img src="./img/pasan-360w.jpg" alt="" srcset="">
+    </footer>
     
 </body>
 </html>
