fix: improve link accessibility

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut corrupti doloremque exercitationem esse fugit quae accusamus facere quidem ex deserunt in maxime magni enim sit aperiam, corporis rem similique.
             <div class="header__link-buttons">
-                <i class="devicon-github-original"></i>  
-                <i class="devicon-linkedin-plain"></i>     
-                <i class="devicon-twitter-original"></i>           
+                <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                <a href="http://linkedin.com" aria-label="linkedin page"></a><i class="devicon-linkedin-plain"></i></a>     
+                <a href="twitter.com" aria-label="twitter page"></a><i class="devicon-twitter-original"></i></a>     
             </div>                  
         </div>
     </header>
@@ -43,10 +43,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -56,10 +56,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -69,10 +69,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -82,10 +82,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -95,10 +95,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -108,10 +108,10 @@
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
-                        <i class="devicon-github-original"></i>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-                        </svg>
+                        </svg></a>
                     </div>
                 </div>
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
@@ -136,10 +136,10 @@
         <div class="footer_phone">555-555</div>
         <div class="footer_email">pasan@starry.com</div>
         <div class="footer_link-buttons">
-            <div class="header__link-buttons">
-                <i class="devicon-github-original"></i>  
-                <i class="devicon-linkedin-plain"></i>     
-                <i class="devicon-twitter-original"></i>           
+            <div class="footer__link-buttons">
+                <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+                <a href="http://linkedin.com" aria-label="linkedin page"><i class="devicon-linkedin-plain"></i></a>
+                <a href="twitter.com" aria-label="twitter page"><i class="devicon-twitter-original"></i></a>           
             </div>  
         </div>
         <img src="./img/pasan-360w.jpg" alt="" srcset="">
