--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
@@ -70,7 +70,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
@@ -83,7 +83,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
@@ -96,7 +96,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
                         <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="darkviolet" style="width: 2.5rem; height: 2.5rem;">
+                        <a href="http://my.github.io" aria-label="open live version of the project in a new window"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
                         </svg></a>
                     </div>
