fix: replace jpg images with webp images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header__background">
         </div>
         <div class="header__img-container">
-            <img src="./img/pasan2-360w.jpg" alt="" class="header__profile-pic">
+            <img src="./img/pasan2-360w.webp" alt="" class="header__profile-pic">
             <div class="header__name">PA-San</div>
         </div>
         <div class="header__about-me-box">
@@ -39,7 +39,7 @@
         </div>
         <div class="main__card-container">
             <div class="main__card">
-                <img src="./img/project1.jpg" alt="" srcset="">
+                <img src="./img/project1.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -52,7 +52,7 @@
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
             </div>
             <div class="main__card">
-                <img src="./img/project2.jpg" alt="" srcset="">
+                <img src="./img/project2.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -65,7 +65,7 @@
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
             </div>
             <div class="main__card">
-                <img src="./img/project3.jpg" alt="" srcset="">
+                <img src="./img/project3.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -78,7 +78,7 @@
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
             </div>
             <div class="main__card">
-                <img src="./img/project4.jpg" alt="" srcset="">
+                <img src="./img/project4.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -91,7 +91,7 @@
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
             </div>
             <div class="main__card">
-                <img src="./img/project5.jpg" alt="" srcset="">
+                <img src="./img/project5.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -104,7 +104,7 @@
                 <div class="main__card-description">Short description of the project. Just a couple sentences will do</div>
             </div>
             <div class="main__card">
-                <img src="./img/project6.jpg" alt="" srcset="">
+                <img src="./img/project6.webp" alt="" srcset="">
                 <div class="card__header">
                     <div class="main__card-title title">Project name</div>
                     <div class="main__card-links">
@@ -142,7 +142,7 @@
                 <a href="twitter.com" aria-label="twitter page"><i class="devicon-twitter-original"></i></a>           
             </div>  
         </div>
-        <img src="./img/pasan-360w.jpg" alt="" srcset="">
+        <img src="./img/pasan-360w.webp" alt="" srcset="">
     </footer>
     
 </body>
