feat: add media query for mid-res for main and footer

--- a/index.html
+++ b/index.html
@@ -134,24 +134,24 @@
         <div class="footer_contact-intro">
             Please get in touch if you think our work could be mutually beneficial!
         </div>
-        <div class="footer_address">
-            <div class="footer_address-line">
-                123 Starry
-            </div> 
-            <div class="footer_address-line">
-                Place, Japan
-            </div> 
+        <div class="footer__contact-info">
+            <div class="footer_address">
+                <div class="footer_address-line">
+                    123 Starry
+                </div> 
+                <div class="footer_address-line">
+                    Place, Japan
+                </div> 
+                <div class="footer_phone">555-555</div>
+                <div class="footer_email">pasan@starry.com</div>
+            </div>
+            </div>
         </div>
-        </div>
-        <div class="footer_phone">555-555</div>
-        <div class="footer_email">pasan@starry.com</div>
-        <div class="footer_link-buttons">
-            <div class="footer__link-buttons">
-                <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                <a href="http://linkedin.com" aria-label="linkedin page"><i class="devicon-linkedin-plain"></i></a>
-                <a href="twitter.com" aria-label="twitter page"><i class="devicon-twitter-original"></i></a>           
-            </div>  
-        </div>
+        <div class="footer__link-buttons">
+            <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
+            <a href="http://linkedin.com" aria-label="linkedin page"><i class="devicon-linkedin-plain"></i></a>
+            <a href="twitter.com" aria-label="twitter page"><i class="devicon-twitter-original"></i></a>           
+        </div>  
         <img 
         alt="pasan"
         class="footer__img" 
