feat: add media query for mid-res for header

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut corrupti doloremque exercitationem esse fugit quae accusamus facere quidem ex deserunt in maxime magni enim sit aperiam, corporis rem similique.
             <div class="header__link-buttons">
                 <a href="http://github.com" aria-label="github repository"><i class="devicon-github-original"></i></a>
-                <a href="http://linkedin.com" aria-label="linkedin page"></a><i class="devicon-linkedin-plain"></i></a>     
-                <a href="twitter.com" aria-label="twitter page"></a><i class="devicon-twitter-original"></i></a>     
+                <a href="http://linkedin.com" aria-label="linkedin page"><i class="devicon-linkedin-plain"></i></a>     
+                <a href="http://twitter.com" aria-label="twitter page"><i class="devicon-twitter-original"></i></a>     
             </div>                  
         </div>
     </header>
