feat: add media query for hi-res for footer

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     </main>
 
     <footer>
-        <div class="footer_title title">Contact me</div>
-        <div class="footer_contact-intro">
+        <div class="footer__title title">Contact me</div>
+        <div class="footer__contact-intro">
             Please get in touch if you think our work could be mutually beneficial!
         </div>
         <div class="footer__contact-info">
